feat(notification,meeting-scheduler): swagger, updated readme, handle meeting notifications, fetch func for getting active meeting
