# meeting/meeting-scheduler-service/internal/domain/dto/meeting_dto.go
@@ -4,17 +4,20 @@ package dto
 // swagger:model MeetingDTO
 type MeetingDTO struct {
 	// Meeting unique identifier
-	MeetingID string `json:"meetingID"`
+	MeetingID string `json:"meetingId"`
 	// Members who participated in the meeting
-	Members []UserDTO `json:"members"`
+	Members []UserDTO `json:"members,omitempty"`
 	// Timestamp of started meeting
 	Timestamp *int64 `json:"timestamp,omitempty"`
+	// Meetings title
+	Title string `json:"title"`
 }
 
-func NewMeetingDTO(meetingID string, members []UserDTO, timestamp *int64) *MeetingDTO {
+func NewMeetingDTO(meetingID string, members []UserDTO, timestamp *int64, title string) *MeetingDTO {
 	return &MeetingDTO{
 		MeetingID: meetingID,
 		Members:   members,
 		Timestamp: timestamp,
+		Title:     title,
 	}
 }
