# meeting/meeting-scheduler-service/internal/infrastructure/handlers/manage_meeting_handler.go
@@ -7,6 +7,8 @@ import (
 	"meeting-scheduler-service/internal/infrastructure/middleware"
 	"meeting-scheduler-service/internal/infrastructure/response"
 	"net/http"
+
+	"github.com/gorilla/mux"
 	// @title Meeting Scheduler API
 	// @version 1.0
 	// @description Serivce to requesting meetings in .tutora
@@ -27,14 +29,15 @@ func NewManageMeetingHandler(m interfaces.ManageMeeting) ManageMeetingHandler {
 // StartMeeting godoc
 // @Summary Start a meeting
 // @Description Starts a meeting based on the provided DTO
-// @Tags meetings
+// @Tags start meetings
 // @Accept json
 // @Produce json
 // @Param meeting body dto.StartMeetingDTO true "Start Meeting DTO"
-// @Success 200 {object} response.Response "Meeting details after operation"
+// @Success 200 {object} response.Response{data=dto.MeetingDTO} "Meeting details after operation"
 // @Failure 400 {object} response.Response "Bad request due to invalid data or DTO type"
 // @Failure 405 {object} response.Response "Method not allowed (only POST supported)"
 // @Router /api/v1/meeting/start [post]
+// @Router /api/v1/meeting/start [put]
 func (m *ManageMeetingHandler) StartMeeting(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodPost {
 		response.NewResponse(w, "Use Post method", http.StatusMethodNotAllowed, nil)
@@ -61,33 +64,55 @@ func (m *ManageMeetingHandler) StartMeeting(w http.ResponseWriter, r *http.Reque
 // EndMeeting godoc
 // @Summary End a meeting
 // @Description Ends a meeting based on the provided DTO
-// @Tags meetings
+// @Tags ending meetings
 // @Accept json
 // @Produce json
 // @Param meeting body dto.EndMeetingDTO true "End Meeting DTO"
-// @Success 200 {object} response.Response "Meeting details after operation"
-// @Failure 400 {object} response.Response "Bad request due to invalid data or DTO type"
-// @Failure 405 {object} response.Response "Method not allowed (only POST supported)"
+// @Success 200 {object} response.Response{data=dto.MeetingDTO}
+// @Failure 400 {object} response.Response
 // @Router /api/v1/meeting/end [post]
+// @Router /api/v1/meeting/end [delete]
 func (m *ManageMeetingHandler) EndMeeting(w http.ResponseWriter, r *http.Request) {
-	if r.Method != http.MethodPost {
-		response.NewResponse(w, "Use Post method", http.StatusMethodNotAllowed, nil)
-		return
-	}
-
 	body := middleware.GetDTO(r)
 	endDTO, ok := body.(*dto.EndMeetingDTO)
 	if !ok {
-		response.NewResponse(w, "invalid DTO type", http.StatusBadRequest, nil)
+		response.NewResponse(w, "Invalid body", http.StatusBadRequest, nil)
 		return
 	}
 
-	log.Println("Requested stopping meeting")
-	meeting, err := m.manager.Stop(*endDTO)
+	err := m.manager.Stop(*endDTO)
 	if err != nil {
 		response.NewResponse(w, err.Error(), http.StatusBadRequest, nil)
 		return
 	}
 
-	response.NewResponse(w, "Meeting ended successfully!", http.StatusOK, meeting)
+	response.NewResponse(w, "Meeting ended successfully!", http.StatusOK, nil)
+}
+
+// GetActiveMeeting godoc
+// @Summary Gets active meeting
+// @Description Fetches information about active meeting for given class. "members" will be empty.
+// @Tags meetings class
+// @Produce json
+// @Param class_id path string true "Class ID"
+// @Success 200 {object} response.Response{data=dto.MeetingDTO} "Found active meeting"
+// @Failure 400 {object} response.Response "Empty class id"
+// @Failure 404 {object} response.Response "Not found or not started yet"
+// @Failure 405 {object} response.Response "Method not allowed (only GET supported)"
+// @Router /api/v1/meeting/{class_id} [get]
+func (m *ManageMeetingHandler) GetActiveMeeting(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	classID := vars["class_id"]
+	if classID == "" {
+		response.NewResponse(w, "Empty class id", http.StatusBadRequest, nil)
+		return
+	}
+
+	dto, err := m.manager.ActiveMeeting(classID)
+	if err != nil {
+		response.NewResponse(w, "Not found or not started yet", http.StatusNotFound, nil)
+		return
+	}
+
+	response.NewResponse(w, "Found active meeting", http.StatusOK, *dto)
 }
